--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
               As a third-year engineering student with a keen interest in cybersecurity and penetration tester. My academic journey has provided me with a solid understanging of network protocols, operating systems and secure coding practices.   
             </p>
             <p>
-              I aslo have hands on experience through a platform called tryhackme.com in which I am one of the top 3% users.I am excited to aplly my skills in a professional setting.
+              I aslo have hands on experience through a platform called tryhackme.com in which I am one of the top 2% users.I am excited to aplly my skills in a professional setting.
             </p>
           </div>
         </div>
         <div class="workExperience">
           <h2>
-            Work experience
+            Projects
           </h2>
      		<p>
      		Currently none :(
