--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
 
               <div class="skill">
                 <div>
-                  <span><li>Adaptable</li></span>
+                  <span><li>BurpSuite</li></span>
                 </div>
               </div>
 
               <div class="skill">
                 <div>
-                  <span><li>Powerpoint</li></span>
+                  <span><li>Python</li></span>
                 </div>
               </div>
 
               <div class="skill">
                 <div>
-                  <span><li>Quick Learner</li></span>
+                  <span><li>Bash Scripting</li></span>
                 </div>
               </div>
               
               <div class="skill">
                 <div>
-                  <span><li>Critical Thinking</li></span>
+                  <span><li>Web Security Concepts</li></span>
                 </div>
               </div>
               
               <div class="skill">
                 <div>
-                  <span><li>Strong Communication</li></span>
+                  <span><li>Secure Coding</li></span>
                 </div>
               </div>
 
@@ -95,7 +95,7 @@
                 DMI College of Engineering
                 </p>
                 <p>
-                2010 - 2014
+                2022 - 2026
               </p>
             </div>
           </div>
