--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </p>
               <p>
                 <i class="fa fa-linkedin-square contactIcon" aria-hidden="true"></i>
-                <a href="https://www.linkedin.com/in/esthaktwinson-a-879390259/">
+                <a href="https://www.linkedin.com/in/antonyesthaktwinson/">
                   EsthakTwinson A
                 </a>
               </p>
@@ -130,8 +130,9 @@
           <h2>
             Projects
           </h2>
+          <a href="">Automated Vulnerability Scanner for XSS, CSRF, and CRLF Using Python and Bash</a>
      		<p>
-     		Currently none :(
+     		A lightweight scanner developed in Python to detect common web vulnerabilities including Cross-Site Scripting (XSS), Cross-Site Request Forgery (CSRF), and Carriage Return Line Feed (CRLF) injection. The tool is seamlessly automated using a Bash script to streamline scanning tasks across multiple targets or endpoints.
      		</p>
      		<br>
         </div>
