--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h2>
             Projects
           </h2>
-          <a href="">Automated Vulnerability Scanner for XSS, CSRF, and CRLF Using Python and Bash</a>
+          <h3>Automated Vulnerability Scanner for XSS, CSRF, and CRLF Using Python and Bash</h3><a href="">Link</a>
      		<p>
      		A lightweight scanner developed in Python to detect common web vulnerabilities including Cross-Site Scripting (XSS), Cross-Site Request Forgery (CSRF), and Carriage Return Line Feed (CRLF) injection. The tool is seamlessly automated using a Bash script to streamline scanning tasks across multiple targets or endpoints.
      		</p>
