--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Projects</h2>
         <div class="project smallText">
           <h3>Automated Vulnerability Scanner</h3>
-          <a href="#">Project Link</a>
+          <a href="https://github.com/Twinson333/vuln-toolkit">Project Link</a>
           <p>This tool detects XSS, CSRF, and CRLF vulnerabilities using Python and automates scanning with a Bash script. It's designed for lightweight, scalable testing across multiple endpoints.</p>
         </div>
       </section>
