--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
       </section>
     </section>
   </main>
+  <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=a3405f26-5e93-4b94-9034-39caaf9e7c16"> </script>
 </body>
 </html>
