--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ $ cat certifications.txt
           <div class="timeline-item">
             <div class="timeline-date">2022 - Present</div>
             <div class="timeline-content">
-              <pre><h3>                     TryHackMe Top Performer</h3></pre>
+              <h3>I'm Hidden Ha! TryHackMe Top Performer</h3>
               <p>Ranked in top 2% of 4M+ users. Completed 150+ practical labs covering exploitation, privilege escalation, and malware analysis. Mastered OWASP Top 10 vulnerabilities.</p>
             </div>
           </div>
