--- a/index.html
+++ b/index.html
@@ -150,22 +150,25 @@ $ cat certifications.txt
       </section>
 
       <section id="projects" class="cyber-section">
-        <h2><span class="section-number">04</span> <span class="section-title">repos</span></h2>
-        <div class="project-cards">
-          <div class="project-card">
-            <div class="project-icon"><i class="fas fa-search"></i></div>
-            <h3>Web Vulnerability Scanner</h3>
-            <p>Python script to detect XSS, SQLi, and open redirects in web applications. Automated scanning with customizable payloads.</p>
-            <div class="project-tech">Python | Requests | BeautifulSoup</div>
-          </div>
-          <div class="project-card">
-            <div class="project-icon"><i class="fas fa-flag"></i></div>
-            <h3>CTF Solutions</h3>
-            <p>Collection of documented solutions for TryHackMe and HackTheBox challenges covering various attack vectors.</p>
-            <div class="project-tech">Pentesting | Writeups | Methodology</div>
-          </div>
-        </div>
-      </section>
+  <h2><span class="section-number">04</span> <span class="section-title">repos</span></h2>
+  <div class="project-cards">
+    <!-- Project 1 -->
+    <a href="https://github.com/yourusername/web-vulnerability-scanner" target="_blank" class="project-card">
+      <div class="project-icon"><i class="fas fa-search"></i></div>
+      <h3>Web Vulnerability Scanner</h3>
+      <p>Python script to detect XSS, SQLi, and open redirects in web applications. Automated scanning with customizable payloads.</p>
+      <div class="project-tech">Python | Requests | BeautifulSoup</div>
+    </a>
+    
+    <!-- Project 2 -->
+    <a href="https://github.com/yourusername/ctf-solutions" target="_blank" class="project-card">
+      <div class="project-icon"><i class="fas fa-flag"></i></div>
+      <h3>CTF Solutions</h3>
+      <p>Collection of documented solutions for TryHackMe and HackTheBox challenges covering various attack vectors.</p>
+      <div class="project-tech">Pentesting | Writeups | Methodology</div>
+    </a>
+  </div>
+</section>
 
       <section id="contact" class="cyber-section">
   <h2><span class="section-number">05</span> <span class="section-title">ping</span></h2>
